@@ -764,7 +764,7 @@ MODULE input
            ecutrho, ecfixed, qcutz, q2sigma, tk_inp, wmass,                   &
            ion_radius, emass, emass_cutoff, temph, fnoseh, nr1b, nr2b, nr3b,  &
            tempw, fnosep, nr1, nr2, nr3, nr1s, nr2s, nr3s, ekincw, fnosee,    &
-           outdir, prefix, nkstot, xk,                                        &
+           outdir, prefix, nkstot, xk, vdw_table_name,                        &
            occupations, n_inner, fermi_energy, rotmass, occmass,              &
            rotation_damping, occupation_damping, occupation_dynamics,         &
            rotation_dynamics, degauss, smearing, nhpcl, nhptyp, ndega,        &
@@ -818,6 +818,9 @@ MODULE input
      USE ensemble_dft,     ONLY : ensemble_initval,tens
      USE wannier_base,     ONLY : wannier_init
      USE efield_module,    ONLY : tefield
+     USE funct,            ONLY : dft_is_nonlocc
+     USE kernel_table,     ONLY : vdw_table_name_ => vdw_table_name, &
+                                  initialize_kernel_table
      !
      IMPLICIT NONE
      !
@@ -945,6 +948,13 @@ MODULE input
      !
      CALL ldaU_init0 ( ntyp, lda_plus_u, Hubbard_U )
      CALL ldaUpen_init( SIZE(sigma_pen), step_pen, sigma_pen, alpha_pen, A_pen )
+     !
+     ! ... initialize kernel table for nonlocal functionals
+     !
+     IF ( dft_is_nonlocc( ) ) THEN
+        vdw_table_name_ = vdw_table_name
+        CALL initialize_kernel_table()
+     ENDIF
      !
      RETURN
      !
